<resources>
    <string name="app_name">Hive</string>
    <string name="grant_permissions_text">Please, grant permissions</string>
    <string name="permissions_description">Hive requires several permissions for proper functioning.
        Without permissions Hive won\'t work.
    </string>
    <string name="permissions_toast">Please, grant all the required permissions in system settings! Without
        permissions Hive won\'t work.
    </string>
    <string name="grant_permissions">Grant permissions</string>
    <string name="sign_in_error">Sign in error</string>
    <string name="sign_in_no_network">No Internet connection. Please, enable network connection and try again!</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="play_services_unavailable">Hive won\'t run without Google Play Services, which are not supported by
        your device
    </string>
    <string name="connecting">Connecting to network…</string>
    <string name="close">Close</string>
    <string name="user_picture">User picture</string>
    <string name="complete_action_using">Complete action using</string>
    <string name="change_user_picture_error">Error changing user picture</string>
    <string name="enter_username">Enter username</string>
    <string name="about_me">About me</string>
    <string name="enter_description">Tell a few words about yourself</string>
    <string name="offers">Offers</string>
    <string name="add_offer">Add offer</string>
    <string name="username">Username</string>
    <string name="username_save_error">Error updating username</string>
    <string name="description_save_error">Error updating user description</string>
    <string name="offer">Offer</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account">Delete account</string>
    <string name="prompt_sign_out">Do you really want to sign out?</string>
    <string name="prompt_delete_account">Do you really want to delete your user account and all related data?
        This operation cannot be undone!
    </string>
    <string name="sign_out_no_network">No Internet connection. Cannot sign out</string>
    <string name="sign_out_error">Sign out failed. Please, try again</string>
    <string name="delete_account_success">User account successfully deleted</string>
    <string name="delete_account_no_network">No Internet connection. Cannot delete account</string>
    <string name="delete_account_error">Error deleting user account. Please, sign out, then sign in and try again</string>
    <string name="add_photo">Add photo</string>
    <string name="add_photo_error">Error uploading photo</string>
    <string name="max_visible_photos">You have reached maximum number of visible photos.
        All newly added photos will not be visible to other users
    </string>
    <string name="delete_photo">Delete photo</string>
    <string name="delete_photo_error">Error deleting photo</string>
    <string name="prompt_delete_photo">Do you really want to delete this photo?</string>
    <string name="no_active_offers_warning">You are not visible in search results, because you have no active offers</string>
    <string name="active_offer">Active offer</string>
    <string name="contacts">Contacts</string>
    <string name="enter_phone">Enter phone number</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_save_error">Error updating phone</string>
    <string name="enter_email">Enter email</string>
    <string name="email">Email</string>
    <string name="email_save_error">Error updating email</string>
    <string name="username_not_valid">Must not contain spaces</string>
    <string name="phone_not_valid">Not a valid phone number</string>
    <string name="email_not_valid">Not a valid email</string>
    <string name="use_registration_email">Use registration email</string>
    <string name="skype">Skype username</string>
    <string name="enter_skype">Enter Skype username</string>
    <string name="skype_save_error">Error updating Skype username</string>
    <string name="facebook">Facebook username</string>
    <string name="enter_facebook">Enter Facebook username</string>
    <string name="facebook_save_error">Error updating Facebook username</string>
    <string name="twitter">Twitter username</string>
    <string name="enter_twitter">Enter Twitter username</string>
    <string name="twitter_save_error">Error updating Twitter username</string>
    <string name="instagram">Instagram username</string>
    <string name="enter_instagram">Enter Instagram username</string>
    <string name="instagram_save_error">Error updating Instagram username</string>
    <string name="youtube">YouTube username</string>
    <string name="enter_youtube">Enter YouTube username</string>
    <string name="youtube_save_error">Error updating YouTube username</string>
    <string name="website">Website address</string>
    <string name="enter_website">Enter website address</string>
    <string name="website_save_error">Error updating website address</string>
    <string name="website_not_valid">Not a valid website address</string>
    <string name="residence">Place of residence</string>
    <string name="enter_residence">Where do you live?</string>
    <string name="residence_save_error">Error updating place of residence</string>
    <string name="language">Language</string>
    <string name="enter_language">What languages do you speak?</string>
    <string name="language_save_error">Error updating language</string>
    <string name="education">Education</string>
    <string name="enter_education">What education do you have?</string>
    <string name="education_save_error">Error updating education</string>
    <string name="work">Work</string>
    <string name="enter_work">Where do you work?</string>
    <string name="work_save_error">Error updating work</string>
    <string name="interests">Interests</string>
    <string name="enter_interests">What interests do you have?</string>
    <string name="interests_save_error">Error updating interests</string>
    <string name="status">Status</string>
    <string name="enter_status">Tell us what are you doing?</string>
    <string name="status_save_error">Error updating status</string>
    <string name="app_version">App version</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="text_master_tip">Fill in all profile fields, add user pic and user photos to receive TextMaster award</string>
    <string name="offer_provider_tip">Publish at least one offer to receive OfferProvider award</string>
    <string name="altruist_tip">Publish 3 or more active offers and make all of them free to receive Altruist award</string>
    <string name="hive_core_tip">Publish 10 or more active offers to receive HiveCore award (paid subscription required)</string>
    <string name="review_poster_tip">Post 1 review to receive ReviewPoster award</string>
    <string name="story_teller_tip">Post 10 reviews to receive StoryTeller award</string>
    <string name="mega_critic_tip">Post 100 reviews to receive MegaCritic award</string>
    <string name="offer_finder_tip">Post 1 first review to receive OfferFinder award</string>
    <string name="oflumbus_tip">Post 10 first reviews to receive Oflumbus award</string>
    <string name="favoritizer_tip">Add user or offer to favorites to receive Favoritizer award</string>
    <string name="add_own_offer_favorite_error">Cannot add your own offer to favorites</string>
    <string name="change">Change</string>
    <string name="delete_user_pic">Delete user pic</string>
    <string name="delete_user_pic_error">Error deleting user pic</string>
    <string name="prompt_delete_user_pic">Do you really want to delete user pic?</string>
    <string name="warning">Warning</string>
    <string name="rating">Rating</string>
    <string name="cancel_search">Cancel search</string>
    <string name="my_location">My location</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
    <string name="show_list">Show list</string>
    <string name="search_filter">Search filter</string>
    <string name="user_details">User details</string>
    <string name="about">About</string>
    <string name="close_details">Close details</string>
    <string name="chat">Chat</string>
    <string name="no_active_offer">No active offers</string>
    <string name="location">Location</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="add_favorite_error">Error adding to favorites</string>
    <string name="remove_favorite_error">Error removing from favorites</string>
    <string name="summary">Summary</string>
    <string name="user_creation_date">In Hive since</string>
    <string name="user_first_offer_creation_date">First offer published</string>
    <string name="user_active_offers_count">Active offers</string>
    <string name="user_posted_reviews_count">Posted reviews</string>
    <string name="user_posted_first_reviews_count">Posted first reviews</string>
    <string name="user_total_reviews_count">Received reviews</string>
    <string name="user_total_star_count">Total favorite stars</string>
    <string name="email_subject">Email from Hive</string>
    <string name="skype_not_installed">Skype not installed</string>
    <string name="information">Information</string>
    <string name="online">online</string>
    <string name="offline">offline</string>
    <string name="last_seen">last seen</string>
    <string name="last_seen_at">last seen at</string>
    <string name="still">Still</string>
    <string name="walking">Walking</string>
    <string name="running">Running</string>
    <string name="bicycle">On bicycle</string>
    <string name="vehicle">In vehicle</string>
    <string name="account_deleted">User account deleted</string>
    <string name="awards">Awards</string>
    <string name="text_master">TextMaster</string>
    <string name="offer_provider">OfferProvider</string>
    <string name="altruist">Altruist</string>
    <string name="good_provider">GoodProvider</string>
    <string name="super_provider">SuperProvider</string>
    <string name="newbie">Newbie</string>
    <string name="reviewed_provider">ReviewedProvider</string>
    <string name="close_offer_update">Close offer update</string>
    <string name="delete_offer">Delete offer</string>
    <string name="save_offer">Save offer</string>
    <string name="text_master_info">All user information has been provided: user pic, photos, description, contacts etc.</string>
    <string name="free_offers">Only free offers</string>
    <string name="offers_with_reviews">Only offers with reviews</string>
    <string name="has_phone">Phone specified</string>
    <string name="has_email">Email specified</string>
    <string name="has_skype">Skype specified</string>
    <string name="has_facebook">Facebook specified</string>
    <string name="has_twitter">Twitter specified</string>
    <string name="has_instagram">Instagram specified</string>
    <string name="has_youtube">Youtube specified</string>
    <string name="has_website">Website specified</string>
    <string name="has_textmaster">Has TextMaster award</string>
    <string name="activity">Activity</string>
    <string name="any_activity">Does not matter</string>
    <string name="sort_by_title">Title (name)</string>
    <string name="sort_by_price">Price</string>
    <string name="sort_by_rating">Rating</string>
    <string name="order_by">Order by</string>
    <string name="order_ascending">Ascending</string>
    <string name="order_descending">Descending</string>
    <string name="sort_by_type">By type</string>
    <string name="offers_first">Offers first</string>
    <string name="users_first">Users first</string>
</resources>