<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

    <RadioButton
            android:id="@+id/sort_by_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sort_by_title"
            style="@style/basicTextStyle"/>

    <RadioButton
            android:id="@+id/sort_by_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sort_by_price"
            style="@style/basicTextStyle"/>

    <RadioButton
            android:id="@+id/sort_by_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sort_by_rating"
            style="@style/basicTextStyle"/>

</RadioGroup>