<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/md_grey_300"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/awards"
            style="@style/titleTextStyle"/>

    <CheckBox
            android:id="@+id/filter_has_textmaster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/has_textmaster"
            android:layout_marginTop="16dp"
            style="@style/basicTextStyle"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_master_info"
            style="@style/mediumTextStyle"/>

</LinearLayout>
