<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

    <ImageButton
            android:id="@+id/update_offer_back_button"
            android:layout_width="@dimen/basic_view_size"
            android:layout_height="@dimen/basic_view_size"
            android:src="@drawable/ic_arrow_back"
            android:background="@android:color/transparent"
            android:contentDescription="@string/close_offer_update"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/offer"
            style="@style/titleTextStyle"
            android:id="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/update_offer_back_button"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>

    <ImageButton
            android:id="@+id/update_offer_delete_button"
            android:layout_width="@dimen/basic_view_size"
            android:layout_height="@dimen/basic_view_size"
            android:src="@drawable/ic_delete"
            android:background="@android:color/transparent"
            android:contentDescription="@string/delete_offer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/update_offer_save_button"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>

    <ImageButton
            android:id="@+id/update_offer_save_button"
            android:layout_width="@dimen/basic_view_size"
            android:layout_height="@dimen/basic_view_size"
            android:src="@drawable/ic_check2"
            android:background="@android:color/transparent"
            android:contentDescription="@string/save_offer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>